<resources>
    <string name="app_name">Smart Locker</string>
    <string name="begin">Começar</string>
    <string name="already">Já possuo cadastro</string>
    <string name="create">Crie sua conta Smart</string>
    <string name="create2">Locker</string>
    <string name="signup">Cadastrar</string>
    <string name="fullname">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="phone">Celular</string>
    <string name="emailSignup">Email</string>
    <string name="passwordSignup">Senha</string>
    <string name="login">Entrar</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="password_recovery">Um email de recuperação foi enviado para</string>
    <string name="instructions">Siga as instruções para recuperar sua senha.</string>
    <string name="ok">OK</string>
    <string name="check_email">Caso não tenha recebido um email na caixa de entrada verifique na pasta de spam ou na lixeira eletronica.</string>
    <string name="notice_check_email">Um email de verificação foi enviado para</string>
    <string name="btn_rental_points">Ver pontos de Locação</string>
    <string name="btn_cards">Cartões</string>
    <string name="btn_rent">Alugar Armário</string>
    <string name="str_checkbox">Ao fazer a locação de um armário será cobrada a caução de uma diária e estornada proporcionalmente de acordo com o período utilizado</string>
    <string name="confirmPasswordSignup">Confirme sua senha</string>
    <string name="smartlocker">SmartLocker</string>
    <string name="your_cards">Seus cartões</string>
    <string name="card_number">0000 0000 0000 0000</string>
    <string name="card_name">ex Isabella M T Bruno</string>
    <string name="card_expiration">12/24</string>
    <string name="card_cvv">000</string>
    <string name="label_card_number">Número do cartão</string>
    <string name="label_card_name">Nome</string>
    <string name="label_card_cvv">CVV</string>
    <string name="label_card_expiration">Data de Validade</string>
    <string name="card_number_detail">0000 0000 0000 0000</string>
    <string name="card_name_detail">Isabella Maria T Bruno</string>
    <string name="card_expiration_detail">12/24</string>
    <string name="card_cvv_detail">000</string>
    <string name="reade_nfc">Abrir Armário</string>
    <string name="release_rental">Liberar locação</string>
    <string name="bring_bracelet_close">Aproxime a pulseira NFC do celular.</string>
    <string name="confirm">Confirmar</string>
    <string name="open_locker">Abrir armário momentâneamente</string>
    <string name="end_lease">Encerrar locação</string>
    <string name="select_option">Selecione a opção desejada</string>
    <string name="msg_sucess_open">Armário aberto momentâneamente. Peça para o cliente fechar o armário assim que finalizar.</string>
    <string name="end_lease_confirm">Locação encerrada.</string>
    <string name="cancel_operation">Deseja cancelar essa operação?</string>
    <string name="question_logout">Tem certeza que deseja sair?</string>
    <string name="pendent_rental">Você tem uma locação pendente! Deseja continuar de onde parou?</string>
    <string name="question_cancel_operation">Deseja cancelar essa operação?</string>
    <string name="error_empty_fields">Erro: Preencha todos os campos para continuar.</string>
    <string name="error_agree_terms">Erro: Você deve concordar com os termos para continuar.</string>
    <string name="error_select_option">Erro: Selecione uma opção antes de continuar.</string>
    <string name="card_register_failure">Erro: Falha ao cadastrar cartão. Tente novamente mais tarde.</string>
    <string name="closed_establishment">Não é possível fazer uma locação nesse horário.</string>
    <string name="closed_establishment2">Por favor, tente novamente amanhã a partir das 7h00.</string>
    <string name="invalid_qr_code">Erro: O Qrcode não foi gerado pelo seu aplicativo. Deseja tentar novamente?</string>
</resources>