<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:background="@color/background"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/nav"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".CardRegistrationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            tools:context=".CardRegistrationActivity">

            <!-- Detalhes do cartão de crédito -->
            <View
                android:id="@+id/cardFront"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/shape_card_front"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:src="@drawable/icon_chip_card"
                app:layout_constraintStart_toStartOf="@id/cardFront"
                app:layout_constraintTop_toTopOf="@id/cardFront" />

            <View
                android:id="@+id/cardBack"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_card_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCardNumberDetail"
                style="@style/TextViewCardDetails"
                android:layout_marginBottom="50dp"
                android:elevation="5dp"
                android:text="@string/card_number_detail"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/cardFront"
                app:layout_constraintEnd_toEndOf="@id/cardFront"
                app:layout_constraintStart_toStartOf="@id/cardFront" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameDetail"
                style="@style/TextViewCardDetails"
                android:layout_marginBottom="20dp"
                android:elevation="5dp"
                android:text="@string/card_name_detail"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/cardFront"
                app:layout_constraintEnd_toEndOf="@id/cardFront"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="@id/cardFront" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpDateDetail"
                style="@style/TextViewCardDetails"
                android:layout_marginBottom="20dp"
                android:elevation="5dp"
                android:text="@string/card_expiration_detail"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/cardFront"
                app:layout_constraintEnd_toEndOf="@id/cardFront"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="@id/cardFront" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCvvDetail"
                style="@style/TextViewCardDetails"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/light_gray"
                android:paddingStart="150dp"
                android:paddingEnd="10dp"
                android:text="@string/card_cvv_detail"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/cardBack"
                app:layout_constraintEnd_toEndOf="@id/cardBack"
                app:layout_constraintTop_toTopOf="@id/cardBack" />

            <!-- Campos de input -->

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/editNumCartao"
                style="@style/EditTextCard"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:mask="____ ____ ____ ____"
                app:maskCharacter="_"
                app:maskStyle="normal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editName"
                style="@style/EditTextCard"
                android:hint="@string/card_name"
                android:inputType="textCapCharacters"
                android:maxLength="35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/editDataValidade"
                style="@style/EditTextCard"
                android:layout_width="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/card_expiration"
                android:inputType="date"
                android:maxLength="5"
                app:layout_constraintEnd_toStartOf="@id/editCVV"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/editNumCartao"
                app:layout_constraintTop_toBottomOf="@id/textView14"
                app:mask="__/__"
                app:maskCharacter="_"
                app:maskStyle="normal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editCVV"
                style="@style/EditTextCard"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/card_cvv"
                android:inputType="number"
                android:maxLength="3"
                app:layout_constraintEnd_toEndOf="@id/editNumCartao"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/editDataValidade"
                app:layout_constraintTop_toBottomOf="@id/textView13" />

            <CheckBox
                android:id="@+id/checkBoxCiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/str_checkbox"
                app:layout_constraintTop_toBottomOf="@id/editDataValidade"
                tools:layout_editor_absoluteX="40dp" />

            <!-- Label dos inputs -->

            <TextView
                android:id="@+id/textView11"
                style="@style/TextViewCard"
                android:layout_marginTop="50dp"
                android:text="@string/label_card_number"
                app:layout_constraintStart_toStartOf="@+id/editNumCartao"
                app:layout_constraintTop_toBottomOf="@id/cardFront" />

            <TextView
                android:id="@+id/textView12"
                style="@style/TextViewCard"
                android:text="@string/label_card_name"
                app:layout_constraintStart_toStartOf="@+id/editName"
                app:layout_constraintTop_toBottomOf="@+id/editNumCartao" />

            <TextView
                android:id="@+id/textView13"
                style="@style/TextViewCard"
                android:text="@string/label_card_cvv"
                app:layout_constraintStart_toStartOf="@+id/editCVV"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <TextView
                android:id="@+id/textView14"
                style="@style/TextViewCard"
                android:text="@string/label_card_expiration"
                app:layout_constraintStart_toStartOf="@+id/editDataValidade"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <Button
                android:id="@+id/btnCadastrar"
                style="@style/ButtonsStyle"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/blue"
                android:text="@string/signup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxCiente" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Menu -->
    <include
        android:id="@+id/nav"
        layout="@layout/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
