<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".OpenLockerActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_option"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_open"
            style="@style/RadioButtons"
            android:layout_height="60dp"
            android:text="@string/open_locker" />

        <RadioButton
            android:id="@+id/btn_finish"
            android:layout_height="60dp"
            style="@style/RadioButtons"
            android:text="@string/end_lease" />

        <Button
            android:id="@+id/bt_confirm"
            style="@style/ButtonsStyle"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/orange"
            android:text="@string/confirm"
            android:textSize="20sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>