<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="5dp"
        android:src="@drawable/icon_logo_white"
        app:layout_constraintBottom_toTopOf="@+id/view_release_rental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:elevation="10dp"
        android:text="@string/smartlocker"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <View
        android:id="@+id/containerMainScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_main_screen"
        app:layout_constraintBottom_toBottomOf="@id/view_read_nfc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:padding="20dp"
        android:src="@drawable/icon_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        style="@style/StringsOptions"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/view_read_nfc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

    <View
        android:id="@+id/view_read_nfc"
        style="@style/ContainerOptions"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_release_rental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <View
        android:id="@+id/view_release_rental"
        style="@style/ContainerOptions"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_read_nfc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        style="@style/IconsOptions"
        android:background="@drawable/icon_camera_nfc"
        app:layout_constraintBottom_toBottomOf="@id/view_read_nfc"
        app:layout_constraintEnd_toEndOf="@id/view_read_nfc"
        app:layout_constraintStart_toStartOf="@id/view_read_nfc"
        app:layout_constraintTop_toTopOf="@id/view_read_nfc" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        style="@style/StringsOptions"
        android:text="@string/reade_nfc"
        app:layout_constraintBottom_toBottomOf="@+id/view_read_nfc"
        app:layout_constraintEnd_toEndOf="@+id/view_read_nfc"
        app:layout_constraintStart_toStartOf="@+id/view_read_nfc"
        app:layout_constraintTop_toTopOf="@+id/view_read_nfc" />

    <androidx.appcompat.widget.AppCompatImageView
        style="@style/IconsOptions"
        android:background="@drawable/icon_lock_open"
        app:layout_constraintBottom_toBottomOf="@+id/view_release_rental"
        app:layout_constraintEnd_toEndOf="@+id/view_release_rental"
        app:layout_constraintStart_toStartOf="@+id/view_release_rental"
        app:layout_constraintTop_toTopOf="@+id/view_release_rental" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        style="@style/StringsOptions"
        android:text="@string/release_rental"
        app:layout_constraintBottom_toBottomOf="@+id/view_release_rental"
        app:layout_constraintEnd_toEndOf="@+id/view_release_rental"
        app:layout_constraintStart_toStartOf="@+id/view_release_rental"
        app:layout_constraintTop_toTopOf="@+id/view_release_rental" />


</androidx.constraintlayout.widget.ConstraintLayout>